# sheet2json

./: .gitignore  README.md  pyproject.toml  run.bat  run1.bat  setup.cfg  update.bat
.github/workflows/: codeql-analysis.yml
input/: json_2_mini.XLSX
output/: json_2_mini.json
sheet2json/: sheet2json.py
